--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,6 +13,25 @@
     box-sizing: border-box;
   }
   
+  .Content {
+    background-color: #ffffff;
+    padding: 10px;
+    border-radius: 2px;
+    border: 1px solid #dadadf;
+  }
+  
+  .FillerImage {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .Image {
+    max-height: 40vh;
+    max-width: 100%;
+    object-fit: contain;
+  }
+
   a {
     color: rgb(212, 182, 80);
     transition: color ease-in-out 0.3s;
@@ -38,4 +57,27 @@
     cursor: pointer;
     transition: color ease-in-out 0.3s;
     color: #442e0d;
+  }
+
+  input[type="file"] {
+    display: none;
+  }
+
+  figure {
+    text-align: center;
+    display: inline-block;
+  }
+  
+  /* scrollbar */
+  *::-webkit-scrollbar {
+    width: 5px;
+  }
+  *::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  *::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  *::-webkit-scrollbar-thumb:hover {
+    background: #555;
   }
