--- a/src/styles/SignInUpForm.module.css
+++ b/src/styles/SignInUpForm.module.css
@@ -19,7 +19,7 @@
     text-align: center;
     letter-spacing: 0.2em;
     text-transform: uppercase;
-    color: #2142b2;
+    color: #442e0d;
   }
   
   .Link {
@@ -31,6 +31,7 @@
   
   .Link span {
     color: #ff9254;
+    font-weight: bold;
   }
   
   .Container {
