Added more to popular profiles including changing of styling

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -50,8 +50,8 @@
   .BlackOutline:hover {
     /* background-color: #242a3d;
     color: white; */
-    background-color: #242a3d;
-    color: aliceblue;
+    background-color: #7D5516;
+    color: rgb(241, 235, 213);
   }
   
   .Black:hover,
