--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -33,7 +33,7 @@
   }
 
   a {
-    color: rgb(212, 182, 80);
+    color: rgb(138, 113, 32);
     transition: color ease-in-out 0.3s;
   }
   
@@ -42,12 +42,12 @@
   }
   
   a:hover i {
-    color: #442e0d;
+    color: #462f0c;
     transition: color ease-in-out 0.3s;
   }
   
   i {
-    color: rgb(212, 182, 80);
+    color: rgb(138, 113, 32);
     font-size: 1.3rem;
     padding: 7px;
     vertical-align: middle;
@@ -56,7 +56,7 @@
   i:hover {
     cursor: pointer;
     transition: color ease-in-out 0.3s;
-    color: #442e0d;
+    color: #462f0c;
   }
 
   input[type="file"] {
