Added credit comments and fixed some typos

--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -1,4 +1,4 @@
-
+/* Code from Code Institutes walkthrough project and study material */
 .Avatar {
     border-radius: 50%;
     margin: 0px 8px 0px 8px;
