--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -1,3 +1,4 @@
+/* Code partly from Code Institutes walkthrough project and study material */
 .Button {
     font-size: 0.8rem;
     align-self: center;
