--- a/src/styles/CommentCreateEditForm.module.css
+++ b/src/styles/CommentCreateEditForm.module.css
@@ -1,3 +1,4 @@
+/* Code partly from Code Institutes walkthrough project and study material */
 .Form {
     border: none;
     border-bottom: 2px #462f0c solid;
