--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,4 @@
+/* Code partly from Code Institutes walkthrough project and study material */
 .App {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
