--- a/src/styles/Comment.module.css
+++ b/src/styles/Comment.module.css
@@ -1,3 +1,4 @@
+/* Code partly from Code Institutes walkthrough project and study material */
 .Owner {
     font-weight: bold;
     color: #442e0d;
