--- a/src/styles/MoreDropdown.module.css
+++ b/src/styles/MoreDropdown.module.css
@@ -1,3 +1,4 @@
+/* Code from Code Institutes walkthrough project and study material */
 .DropdownItem {
     display: inline-block;
     max-width: 50%;
