--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,3 +1,4 @@
+/* Code partly from Code Institutes walkthrough project and study material */
 .NavBar {
     background-color: #ffffff;
     border: 1px solid #dadadf;
