--- a/src/styles/PostsPage.module.css
+++ b/src/styles/PostsPage.module.css
@@ -1,3 +1,4 @@
+/* Code partly from Code Institutes walkthrough project and study material */
 .SearchBar input {
     border-radius: 20px;
     color: #242a3d;
